--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,10 @@
     "tasks": [
         {
             "type": "shell",
-            "label": "C/C++: gcc build active file",
-            "command": "/usr/bin/gcc",
+            "label": "C/C++: g++ build active file",
+            "command": "/usr/bin/g++",
             "args": [
+                "-Wall",
                 "-g",
                 "${file}",
                 "-o",
