--- a/Master_CMake_for_Cross-Platform_C++_Project_Building_update_30April2020/m1l1_Building_a_C++_Project_using_G++/v3/src/CMakeLists.txt
+++ b/Master_CMake_for_Cross-Platform_C++_Project_Building_update_30April2020/m1l1_Building_a_C++_Project_using_G++/v3/src/CMakeLists.txt
@@ -6,3 +6,6 @@ add_subdirectory(math)
 
 add_subdirectory(printing)
 
+target_include_directories(math PUBLIC math)
+
+target_include_directories(printing PUBLIC printing)
