--- a/Master_CMake_for_Cross-Platform_C++_Project_Building_update_30April2020/m1l1_Building_a_C++_Project_using_G++/v3/src/CMakeLists.txt
+++ b/Master_CMake_for_Cross-Platform_C++_Project_Building_update_30April2020/m1l1_Building_a_C++_Project_using_G++/v3/src/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(math)
 
 add_subdirectory(printing)
 
+    #These commands are necessary to make the header files in the subdirectories PUBLIC for the main.cpp file to find during compilation.
+    #The command syntax is: target_include_directories(targetName targetProperty directoryLocationOfTarget)
 target_include_directories(math PUBLIC math)
-
 target_include_directories(printing PUBLIC printing)
