--- a/Master_CMake_for_Cross-Platform_C++_Project_Building_update_30April2020/m1l1_Building_a_C++_Project_using_G++/v3/src/math/CMakeLists.txt
+++ b/Master_CMake_for_Cross-Platform_C++_Project_Building_update_30April2020/m1l1_Building_a_C++_Project_using_G++/v3/src/math/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.19.0)
 
 project(Calculator_Project VERSION 1.0.0)
 
-
+    #Creates a library target called math from the .cpp files, who can find their header files because they are in the same directory
 add_library(math
 addition.cpp
 division.cpp)
