--- a/Master_CMake_for_Cross-Platform_C++_Project_Building_update_30April2020/m1l1_Building_a_C++_Project_using_G++/v3/src/printing/CMakeLists.txt
+++ b/Master_CMake_for_Cross-Platform_C++_Project_Building_update_30April2020/m1l1_Building_a_C++_Project_using_G++/v3/src/printing/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.19.0)
 
 project(Calculator_Project VERSION 1.0.0)
 
-
+    #Creates a library target called printing from the .cpp file, who can find its header file because it is in the same directory
 add_library(printing
 print_result.cpp)
 
