--- a/C++_Programing/Cherno/Static_Example/CMakeLists.txt
+++ b/C++_Programing/Cherno/Static_Example/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Static_Example)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Static_Example main.cpp)
+add_executable(Static_Example main.cpp Static.cpp Static.hpp)
