Changed project name

--- a/C++_Programing/Bleep_Words/CMakeLists.txt
+++ b/C++_Programing/Bleep_Words/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
-project(Temp)
+project(Bleep_Words)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(Temp main.cpp Bleep_Functions.cpp Bleep_Functions.hpp)
+add_executable(Bleep_Words main.cpp Bleep_Functions.cpp Bleep_Functions.hpp)
